manifest-files/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
    name: mysql
spec:
  replicas: 1
  strategy:
     type: Recreate 
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts: 
          - mountPath: /var/lib/mysql
            name: mysql-pv
      volumes:
        - name: mysql-pv
          persistentVolumeClaim:
            claimName: mysql-pvc
