manifest-files/web-svc-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    app: web-server
spec:
  selector:
    app: web-server
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort  

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  labels:
    app: web-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - image: fhalearslan/web-app
        name: webserver
        ports:
        - containerPort: 80
