manifest-files/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prj-ingress
  annotations: 
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-server
            port:
              number: 3000
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-server
            port:
              number: 80
